# talisman

./: .gitmodules  README.md
information-flow-analysis/projects/llvm-deps/: CMakeLists.txt  Makefile.common.in  configure
information-flow-analysis/projects/llvm-deps/include/: CallContext.h  CallSensitiveAnalysisPass.h  ConstraintGen.h  FPCache.h  FlowRecord.h  ImplicitFunction.h  Infoflow.h  InfoflowSignature.h  InterProcAnalysisPass.h  PointsToInterface.h  SignatureLibrary.h  SourceSinkAnalysis.h  SourceSinkLocSet.h  TaintAnalysis.h  TaintAnalysisBase.h  VulnerableBranch.h  VulnerableBranchWrapper.h  VulnerableInst.h
information-flow-analysis/projects/llvm-deps/include/Constraints/: ConstraintKit.h  DepsTypes.h  Intervals.h  PartialSolution.h  PredicatedConstraints.h  RLConsSoln.h  RLConstraint.h  RLConstraintKit.h  RLConstraints.h  SolverThread.h
information-flow-analysis/projects/llvm-deps/lib/: Makefile
information-flow-analysis/projects/llvm-deps/lib/Constraints/: MTSolve.cpp  Makefile  PartialSolution.cpp  PredicatedConstraints.cpp  RLConsSoln.cpp  RLConstraintKit.cpp  RLConstraints.cpp  Test.cpp  run.sh
information-flow-analysis/projects/llvm-deps/lib/PointsToInterface/: PointsToInterface.cpp
information-flow-analysis/projects/llvm-deps/lib/Security/: ConstraintGen.cpp  ImplicitFunction.cpp  Makefile  TaintAnalysis.cpp  TaintAnalysisBase.cpp  VulnerableBranch.cpp  VulnerableBranchWrapper.cpp  VulnerableInst.cpp
information-flow-analysis/projects/llvm-deps/lib/SourceSinkAnalysis/: SourceSinkAnalysis.cpp
information-flow-analysis/projects/llvm-deps/linux_security_tests/: copy.sh  linux_tests_automation.sh
information-flow-analysis/projects/llvm-deps/linux_security_tests/apparmor/: build.sh  run.sh  test.bc
information-flow-analysis/projects/llvm-deps/linux_security_tests/selinux/: build.sh  lattice.txt  run.sh  test.bc
information-flow-analysis/projects/llvm-deps/linux_security_tests/tomoyo/: build.sh  lattice.txt  test.bc
information-flow-analysis/projects/llvm-deps/processing_tools/: constraint_file.py  constraint_graph.py  example.sh  hot_spot.py  lattice.py  post_analysis.py  post_analysis_ct_verif.py  shortest_path.py  unlabeled_violation.py  update_gaps.py  update_gaps_other.py
information-flow-analysis/projects/llvm-deps/sensitivity-tests/: fix_point_unit_test.md  test.sh
information-flow-analysis/projects/llvm-deps/sensitivity-tests/addr_test/: config.json  expected.txt  main.c  run.sh
information-flow-analysis/projects/llvm-deps/sensitivity-tests/array_index/: config.json  expected.txt  main.c  run.sh
information-flow-analysis/projects/llvm-deps/sensitivity-tests/array_test/: expected.txt  main.cpp  run.sh
information-flow-analysis/projects/llvm-deps/sensitivity-tests/bn_flags_test/: config.json  expected.txt  main.c  run.sh
information-flow-analysis/projects/llvm-deps/sensitivity-tests/check_implicit/: expected.txt  main.c  run.sh
information-flow-analysis/projects/llvm-deps/sensitivity-tests/class_test/: config.json  expected.txt  main.cpp  run.sh
information-flow-analysis/projects/llvm-deps/sensitivity-tests/collapsing_test/: config.json  expected.txt  main.cpp  run.sh
information-flow-analysis/projects/llvm-deps/sensitivity-tests/consttime_top/: config.json  main.c  run.sh
information-flow-analysis/projects/llvm-deps/sensitivity-tests/context_sensitivity/: config.json  expected.txt  main.c  run.sh
information-flow-analysis/projects/llvm-deps/sensitivity-tests/ct_verif_fail_test/: config.json  main.c  run.sh
information-flow-analysis/projects/llvm-deps/sensitivity-tests/field/: config.json  expected.txt  main.c  run.sh
information-flow-analysis/projects/llvm-deps/sensitivity-tests/flow_insensitive/: config.json  expected.txt  gen.sh  run.sh
information-flow-analysis/projects/llvm-deps/sensitivity-tests/flow_sensitive/: main.c  run.sh
information-flow-analysis/projects/llvm-deps/sensitivity-tests/gapped_argument/: config.json  expected.txt  main.c  run.sh
information-flow-analysis/projects/llvm-deps/sensitivity-tests/gapped_struct/: config.json  expected.txt  main.c  run.sh
information-flow-analysis/projects/llvm-deps/sensitivity-tests/global_undefined/: config.json  expected.txt  main.c
information-flow-analysis/projects/llvm-deps/sensitivity-tests/if-O1/: config.json  (+8 more)
source-analysis/mediator-analyzer/: CMakeLists.txt  README.md
source-analysis/mediator-analyzer/pdg/SVF/: CMakeLists.txt
source-analysis/mediator-analyzer/pdg/include/: GraphWriter.hh
source-analysis/mediator-analyzer/src/: AnalysisController.cpp  AnalysisController.h  CallGraphHelper.cpp  CallGraphHelper.h  InputDep.cpp  InputDep.h  Logger.cpp  Logger.h  MediatorAnalysisController.cpp  MediatorAnalysisController.h  ProgramDependenceGraph.cpp  ProgramDependenceGraph.h  ProgramInfoHelper.cpp  ProgramInfoHelper.h  TaintEngine.cpp  TaintEngine.h
source-analysis/mediator-analyzer/test/call_graph_tests/: call_test_1  call_test_1.bc  call_test_1.c  call_test_1_callgraph.dot  call_test_1_config.txt  run_call_graph.sh
(+689 files in other folders)
